# conductor_fastapi_distributed

./: .env.sample  .gitignore  README.md  docker-compose.yml  nginx.conf  pyproject.toml
ms_order/: ms_order.db
ms_order/src/: database.py  envs.py  main.py
ms_order/src/workers/: order_picker_outbox.json  order_picker_workflow.json  order_processing_workflow.json  order_workflow.json  order_workflow_main copy.json  order_workflow_main.json  utils.py  worker.py
ms_supplier/: Dockerfile  main.py  pyproject.toml
ms_supplier/src/: database.py  envs.py  main.py
ms_warehouse/: ms_warehouse.db
ms_warehouse/src/: database.py  envs.py  main.py
ms_warehouse/src/workers/: utils.py  worker.py
